# fixer

./: README.md  app-guide-ar.md  app-guide-en.md  fix.md  guide-ar.html  guide.html  index.html  landing-page.html  mysql-fix-guide-ar.md  package-lock.json  package.json
plans/: BACKGROUND_EXECUTION.md  BACKUP_VERIFICATION.md  LARAGON_INSTALLER_MILESTONES.md  PROJECT_PLAN.md
plans/laragon plans/: LARAGON_INSTALLER_MILESTONES.md
src/: App.css  App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: database.rs  diagnostics.rs  installer.rs  mod.rs  ping.rs  splash.rs
src-tauri/src/services/: database.rs  diagnostics.rs  installer.rs  mod.rs  scheduler.rs
src/components/: ThemeToggle.tsx
src/components/layout/: MainLayout.tsx
src/components/ui/: alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  sonner.tsx  switch.tsx  terminal-output.tsx
src/lib/: db.ts
src/pages/: Backups.tsx  Dashboard.tsx  Databases.tsx  Diagnostics.tsx  Environment.tsx  Schedules.tsx  Settings.tsx  SplashScreen.tsx
src/store/: useEnvironmentStore.ts  useSettingsStore.ts
