[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
flate2 = "1.0"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
chrono = "0.4.44"
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "2.1"
winreg = "0.52"
fs2 = "0.4"
futures-util = "0.3"
winapi = { version = "0.3", features = ["winuser"] }
lazy_static = "1.4"

[profile.release]
strip = true       # Automatically strip symbols from the binary
lto = true         # Link Time Optimization (smaller, faster)
opt-level = "z"    # Optimize for size

